--- a/market/templates/includes/owned_items_modals.html
+++ b/market/templates/includes/owned_items_modals.html
@@ -29,7 +29,7 @@
           </h6>
           <br>
           <input id="sold_item" name="sold_item" type="hidden" value="{{owned_item.name}}">
-          <h6 class="text-center"></h6>
+          <h6 class="text-center">
           {{ selling_form.submit(class="btn btn-outline-danger btn-block") }}
           </h6>
         </form>
